--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-    
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
-	<script src="./js/jquery.touchSwipe.js"></script>
-	<script src="./js/gmaps.js"></script>
 
     <title> La Panthère - Entreprise Web Design Lyon</title>
 <!-- Analytics -->
@@ -161,7 +153,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon" /></a>
+				<a href="#" data-lightbox="img/1" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -170,7 +162,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/Agence La Panthère Entreprise Web Design à Lyon - Création Site web pour Photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création Site web pour Photographe.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour Photographe" /></a>
+				<a href="#" data-lightbox="img/2" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création Site web pour Photographe.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour Photographe" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -181,7 +173,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour voyageur.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour voyageur.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/2" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour voyageur.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -190,7 +182,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Conception-de-site-web-pour-Mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Conception-de-site-web-pour-Mariage.jpg" class="img-responsive portfolio-thumb" alt="Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Conception-de-site-web-pour-Mariage" /></a>
+				<a href="#" data-lightbox="img/4" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Conception-de-site-web-pour-Mariage.jpg" class="img-responsive portfolio-thumb" alt="Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Conception-de-site-web-pour-Mariage" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
