--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon" /></a>
+				<a href="#" data-lightbox="img/CréationidentitévisuelLyon.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/CréationidentitévisuelLyon.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -162,7 +162,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création Site web pour Photographe.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour Photographe" /></a>
+				<a href="#" data-lightbox="img/Sitewebphotographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/Sitewebphotographe.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour Photographe" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -173,7 +173,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour voyageur.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/Sitewebvoyage.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/Sitewebvoyage.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création de site Web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -182,7 +182,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Conception-de-site-web-pour-Mariage.jpg" class="img-responsive portfolio-thumb" alt="Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Conception-de-site-web-pour-Mariage" /></a>
+				<a href="#" data-lightbox="img/Sitewebmariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/Sitewebmariage.jpg" class="img-responsive portfolio-thumb" alt="Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Conception-de-site-web-pour-Mariage" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
